# devflow-ai

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: badge.yml  ci.yml  lint-test.yml
assets/agents/: architect.md  developer-frontend.md  developer-php.md  developer-python.md  developer-typescript.md  developer.md  planner.md  reviewer.md  tester.md
assets/hooks/: devflow-post-compact.sh
assets/skills/: check.md  code-review.md  context-discipline.md  devflow-build.md  devflow-context.md  devflow-debug.md  devflow-incremental.md  devflow-planning.md  devflow-refactor.md  devflow-review.md  devflow-tdd.md  gsd.md  incremental-build.md  planning-rigor.md  refactor-first.md  rtk.md  tdd-discipline.md
docs/: architecture.md  dx-sprint-prompt.md
docs/adr/: 0001-epic-decomposition.md
src/devflow/: __init__.py  build.py  cli.py  detect.py  display.py  doctor.py  gate.py  git.py  hooks.py  install.py  models.py  runner.py  stream.py  track.py  workflow.py
src/devflow/core/: artifacts.py  backend.py  complexity.py  config.py  console.py  epics.py  errors.py  formatting.py  gate_report.py  history.py  kpis.py  logging.py  metrics.py  migrations.py  models.py  paths.py  phase_outputs.py  phases.py  registry.py  security.py  stack.py  state_machine.py  sync_results.py  track.py  tracker.py  workflow.py  workflow_def.py
src/devflow/integrations/: complexity.py  detect.py  gate.py  git.py
src/devflow/integrations/claude/: backend.py
src/devflow/integrations/gate/: __init__.py  checks.py  complexity.py  config.py  context.py  module_size.py  report.py  runner.py  secrets.py
src/devflow/integrations/git/: __init__.py  commit_message.py  pr_body.py  repo.py  smart_messages.py
src/devflow/integrations/linear/: client.py  sync.py  tracker.py
src/devflow/integrations/pi/: backend.py
src/devflow/orchestration/: build.py  events.py  execution.py  finalize.py  lifecycle.py  model_routing.py  phase_artifacts.py  phase_exec.py  phase_handlers.py  plan_parser.py  planning.py  retry.py  review.py  runner.py  stream.py  sync.py
src/devflow/setup/: _settings.py  doctor.py  init.py  install.py
src/devflow/ui/: console.py  display.py  formatting.py  gate_panel.py  rendering.py  spinner.py  theme.py
tests/: conftest.py  test_build.py  test_cli.py  test_detect.py  test_display.py  test_doctor.py  test_gate.py  test_git.py  test_install.py  test_models.py  test_runner.py  test_stream.py  test_track.py  test_workflow.py
tests/contract/: test_backend_contract.py
tests/core/: test_artifacts.py  test_models.py  test_phases.py  test_workflow.py
tests/e2e/: conftest.py  test_gate_retry.py  test_quick_build.py  test_standard_build.py
tests/e2e/fixtures/mini_python/src/: calculator.py
tests/e2e/fixtures/mini_python/tests/: test_calculator.py
tests/integrations/: test_complexity.py  test_gate.py  test_gate_parallel.py  test_git.py
tests/orchestration/: test_build.py  test_gate_retry.py  test_lifecycle_complexity.py  test_model_routing.py  test_runner.py  test_stream.py  test_sync.py
tests/setup/: test_doctor.py  test_install.py  test_post_compact_hook.py  test_settings.py
tests/smoke/: conftest.py  test_quick_feature.py
tests/ui/: test_display.py  test_display_complexity.py  test_rendering.py  test_spinner.py
tests/unit/: test_cli.py  test_cli_json.py  test_hooks.py
tests/unit/core/: test_artifacts.py  test_config.py  test_epics.py  test_formatting.py  test_history.py  test_kpis.py  test_migrations.py  test_models.py  test_paths.py  test_phase_outputs.py  test_phase_result.py  test_phases.py  test_registry.py  test_stack.py  test_track.py  test_tracker.py  test_workflow.py  test_worktree.py
tests/unit/integrations/: test_complexity.py  test_detect.py  test_gate.py  test_gate_config.py  test_gate_parallel.py  test_stack_plugins.py
tests/unit/integrations/claude/: test_backend.py
tests/unit/integrations/gate/: test_checks.py  test_complexity.py  test_context.py  test_module_size.py  test_report.py  test_runner.py  test_secrets.py
tests/unit/integrations/git/: test_collect_phase_result.py  test_commit_message.py  test_pr_body.py  test_repo.py  test_smart_messages.py  test_worktree.py
tests/unit/integrations/linear/: test_client.py  test_sync.py  test_tracker.py
tests/unit/integrations/pi/: test_backend.py
tests/unit/orchestration/: test_build.py  test_do.py  test_double_review.py  test_gate_retry.py  test_lifecycle_complexity.py  test_model_routing.py  test_phase_artifacts.py  test_phase_exec.py  test_retry.py  test_runner.py  test_stream.py  test_sync.py
tests/unit/setup/: test_doctor.py  test_doctor_fix.py  test_init.py  test_install.py  test_post_compact_hook.py
tests/unit/ui/: test_display.py  test_display_complexity.py  test_gate_panel.py  test_render_phase_commits.py  test_rendering.py  test_spinner.py
workflows/: full.yaml  light.yaml  quick.yaml  standard.yaml
