[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "devflow-ai"
version = "0.1.0"
description = "CLI that installs and orchestrates an AI development environment for Claude Code"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Justine Raze" }]
keywords = ["cli", "ai", "claude", "development", "workflow"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Build Tools",
]
dependencies = [
    "typer>=0.9",
    "rich>=13.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
]

[project.scripts]
devflow = "devflow.cli:app"

[project.urls]
Homepage = "https://github.com/JustineRaze/devflow-ai"
Repository = "https://github.com/JustineRaze/devflow-ai"

[tool.ruff]
target-version = "py311"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/devflow"]

[tool.hatch.build.targets.wheel.force-include]
"assets" = "assets"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.10",
]
